--- a/TendaGo.Api/TendaGo.Api.csproj
+++ b/TendaGo.Api/TendaGo.Api.csproj
@@ -53,6 +53,7 @@
   <ItemGroup>
     <!-- Agrega aquí las dependencias NuGet necesarias, por ejemplo: -->
     <!-- <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.0" /> -->
+    <PackageReference Include="Microsoft.AspNet.Mvc" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.Core" Version="5.3.0" />
     <PackageReference Include="Microsoft.AspNet.WebApi.WebHost" Version="5.3.0" />
     <PackageReference Include="Microsoft.ReportingServices.ReportViewerControl.WebForms" Version="150.1652.0" />
